# ci-vcpkg

./: CMakeLists.txt  LICENSE
.github/workflows/: hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml
src/: main.cpp  test.cpp
